<resources>
    <string name="app_name">SGAP</string>
    <string name="sistema_gerenciador_de_clinicas_sgap">Sistema Gerenciador de Atendimentos ProCare - SGAP</string>
    <string name="escolha_uma_das_op_es_abaixo">Escolha uma das opções abaixo:</string>
    <string name="iniciar_banco_de_dados">Iniciar Banco de Dados</string>
    <string name="todo">TODO</string>
    <string name="cadastrar_funcionario">Cadastrar Funcionario</string>
    <string name="cadastrar_paciente">Cadastrar Paciente</string>
    <string name="novo_atendimento">Novo Atendimento</string>
    <string name="funcionarios">Funcionarios</string>
    <string name="pacientes">Pacientes</string>
    <string name="atendimentos">Atendimentos</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="complete_os_campos_para_registrar_as_informa_es_do_f_ncionario">Complete os campos para registrar as informações do funcionário</string>
    <string name="complete_os_campos_para_registrar_as_informa_es_do_paciente">Complete os campos para registrar as informações do paciente</string>
    <string name="complete_os_campos_para_registrar_as_informa_es_do_atendimento">Complete os campos para registrar as informações do atendimento</string>
    <string name="digite_o_nome">Digite o nome</string>
    <string name="nome">Nome:</string>
    <string name="nomeFuncionario">[Nome]</string>
    <string name="telefone">Telefone:</string>
    <string name="telefoneFuncionario">[Telefone]</string>
    <string name="digite_seu_telefone">Digite o telefone</string>
    <string name="e_mail">E-Mail:</string>
    <string name="e_mailFuncionario">[E-Mail]</string>
    <string name="digite_seu_email">Digite o email</string>
    <string name="cargo">Cargo:</string>
    <string name="cargoFuncionario">[Cargo]</string>
    <string name="digite_o_cargo">Digite o cargo</string>
    <string name="voltar">Voltar</string>
    <string name="status">#status</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="paciente">Paciente:</string>
    <string name="digite_o_id_do_paciente">Digite o id do paciente</string>
    <string name="medico">Medico:</string>
    <string name="digite_o_id_do_medico">Digite o id do medico</string>
    <string name="digite_a_data_da_consulta">Digite a data da consulta</string>
    <string name="data">Data:</string>
    <string name="observa_es">Observações :</string>
    <string name="digite_a_observa_o_da_consulta">Digite a observação da consulta</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuario</string>
    <string name="passe_seu_usario_e_senha_para_acessar_o_sistema">Passe seu usario e senha para acessar o sistema</string>
</resources>