<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3ba0e2" >

        <ImageView
            android:id="@+id/iconuser"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/add_user"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/add_user" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <LinearLayout
            android:id="@+id/layoutCorFundo"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#4B0EA3"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar_funcionario"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutImagemFundo"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_os_campos_para_registrar_as_informa_es_do_f_ncionario"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/nome"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ednome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_o_nome"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/telefone"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_seu_telefone"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />
        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/e_mail"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_seu_email"
            android:inputType="text|textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/cargo"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edcargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_o_cargo"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/btcadastrarFuncionario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar" />

            <Button
                android:id="@+id/btvoltarcf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
