<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.sgap.ui.activity.GravaAtendimentosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3ba0e2" >

        <ImageView
            android:id="@+id/iconuser"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/iconuser"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/iconuser" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <LinearLayout
            android:id="@+id/layoutCorFundo"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#4B0EA3"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gerar_atendimentos"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutImagemFundo"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_os_campos_para_registrar_as_informa_es_do_atendimento"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/paciente"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pacienteid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_o_id_do_paciente"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/medico"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/medicoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_o_id_do_medico"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/data"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_a_data_da_consulta"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/observa_es"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/observacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_a_observa_o_da_consulta"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/btcadastrarAtendimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar" />

            <Button
                android:id="@+id/btvoltarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>